intro 및 works 작업중

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
     --background: #ffffff;
     --foreground: #292626;
     --text: #333;
+    --primary: #a9da50;
 }
 
 /* @media (prefers-color-scheme: dark) {
