--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -9,7 +9,7 @@
     top: 0;
     left: calc(100% + 10px);
     border-radius: 50px;
-    background-color: #a9da50;
+    background-color: var(--primary);
     font-size: 20px;
     font-weight: normal;
     padding: 10px 15px;
