홈 변경 및 소개 페이지 추가, 작업물 페이지 작업중

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,68 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.bg:after {
-    content: "Flexible Developer HYEMI ";
-    font-size: 7vw;
-    font-weight: bold;
+.layout-bg:before {
+    content: "";
     opacity: 0.05;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    width: 100%;
-    text-align: center;
+    top: 0;
+    left: 15vw;
+    translate: -50% 0;
+    width: 1px;
+    height: 100vh;
+    background-color: #000;
+    z-index: -1;
+}
+
+.layout-bg:after {
+    content: "";
+    opacity: 0.05;
+    position: fixed;
+    top: 0;
+    right: 30vw;
+    translate: -50% 0;
+    width: 1px;
+    height: 100vh;
+    background-color: #000;
+    z-index: -1;
+}
+
+.label {
+    position: relative;
+    width: fit-content;
+}
+
+.label:after {
+    content: "UI/UX";
+    position: absolute;
+    top: 0;
+    left: calc(100% + 10px);
+    border-radius: 50px;
+    background-color: #ffd519;
+    font-size: 20px;
+    font-weight: normal;
+    padding: 10px 15px;
+    color: #fff;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #ffd519;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* 스크롤바 호버 색상 */
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
 }
