--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,6 +104,9 @@
 }
 
 @media screen and (max-width: 720px) {
+    .label:after {
+        display: none;
+    }
     .pb-16.pt12 .swiper-button-prev,
     .pb-16.pt12 .swiper-button-next {
         bottom: 0;
